@@ -113,6 +113,9 @@ to bind multiple ip\-addresses. Optionally, a port number can be given.
 If none are given NSD listens to the wildcard interface. Same as commandline option 
 .BR \-a.
 .TP
+.B ip\-transparent:\fR <yes or no>
+Allows NSD to bind to non local addresses. Default is no.
+.TP
 .B debug\-mode:\fR <yes or no>
 Turns on debugging mode for nsd, does not fork a daemon process. 
 Default is no. Same as commandline option 
