@@ -21,6 +21,9 @@ server:
 	# ip-address: 1.2.3.4@5678
 	# ip-address: 12fe::8ef0
 
+	# Allow binding to non local addresses. Default no.
+	# ip-transparent: no
+
 	# enable debug mode, does not fork daemon process into the background.
 	# debug-mode: no
 
